封装项目短信验证码通用组件

--- a/src/style/css/app-gloal.css
+++ b/src/style/css/app-gloal.css
@@ -427,6 +427,10 @@
     margin: 0px 5px 0px 0px;
 }
 
+.margin_right_10 {
+    margin: 0px 10px 0px 0px;
+}
+
 .margin_right_15 {
     margin: 0px 15px 0px 0px;
 }
