2019-05-20 23:56 完成短信验证码通用组件的封装和调用；完成提现密码修改；完成绑定app账号。完成用户密码修改功能（接口未验证成功）

--- a/src/style/css/app-gloal.css
+++ b/src/style/css/app-gloal.css
@@ -381,7 +381,9 @@
 .padding_left {
     padding: 10px 5px 5px 5px;
 }
-
+.padding_top_10 {
+    padding: 10px 0px 0px 0px;
+}
 .padding_top_50 {
     padding: 50px 0px 0px 0px;
 }
